--- a/accesos.html
+++ b/accesos.html
@@ -8,19 +8,21 @@
           items: [
             {
               name: "SIT1",
-              url: "https://www.youtube.com",
-              user: "usuario",
-              password: "password",
+              url: "http://websit1-adm.es.sedc.internal.vodafone.com:19680/cas/login?service=http%3A%2F%2Fwebsit1-adm.es.sedc.internal.vodafone.com%3A19680%2Fsites%2Fwem%2Ffatwire%2Fwem%2FWelcome",
+              user: "Everis",
+              password: "3388_Ev",
             },
             {
               name: "SIT2",
-              url: "https://www.youtube.com",
+              url: "http://websit2-adm.es.sedc.internal.vodafone.com:19680/sites/wem/fatwire/home",
+              user: "Everis2",
+              password: "3888"
             },
             {
               name: "PPRD",
-              url: "https://www.youtube.com",
-              user: "usuario",
-              password: "password",
+              url: "http://webpre-adm.es.sedc.internal.vodafone.com:19685/sites/wem/fatwire/home",
+              user: "fwadmin",
+              password: "xceladmin",
             },
           ],
         },
@@ -29,21 +31,21 @@
           items: [
             {
               name: "SIT1",
-              url: "https://www.youtube.com",
-              user: "usuario",
-              password: "password",
+              url: "https://ui-cb-xdcr.apps-int.ocpcluster.dxlpreprod.local.test.airtel.es/ui/index.html",
+              user: "ocpsit1dxls",
+              password: "OC512wrt",
             },
             {
               name: "SIT2",
-              url: "https://www.youtube.com",
-              user: "usuario",
-              password: "password",
+              url: "https://ui-cb-xdcr.apps-int.ocpcluster.dxlpreprod.local.test.airtel.es/ui/index.html",
+              user: "ocpsit2dxls",
+              password: "OC447aaj",
             },
             {
               name: "PPRD",
-              url: "https://www.youtube.com",
-              user: "usuario",
-              password: "password",
+              url: "https://ui-cb-xdcr.apps-int.ocpcluster.dxlpreprod.local.test.airtel.es/ui/index.html",
+              user: "ocppprddxls",
+              password: "OC124ias",
             },
             {
               name: "HID",
@@ -64,44 +66,21 @@
           items: [
             {
               name: "SIT1",
-              url: "https://www.youtube.com",
-              user: "usuario",
-              password: "password",
+              url: "http://10.225.239.228:25284/c/tienda/particulares/tol-trastienda/#!/login",
+              user: "adminPARTI",
+              password: "adminPARTI1",
             },
             {
               name: "SIT2",
-              url: "https://www.youtube.com",
-              user: "usuario",
-              password: "password",
+              url: "http://10.225.122.249:25284/c/tienda/trastienda/#!/",
+              user: "adminPARTI",
+              password: "admin",
             },
             {
               name: "PPRD",
-              url: "https://www.youtube.com",
-              user: "usuario",
-              password: "password",
-            },
-          ],
-        },
-        {
-          name: "Catalogo",
-          items: [
-            {
-              name: "SIT1",
-              url: "https://www.youtube.com",
-              user: "usuario",
-              password: "password",
-            },
-            {
-              name: "SIT2",
-              url: "https://www.youtube.com",
-              user: "usuario",
-              password: "password",
-            },
-            {
-              name: "PPRD",
-              url: "https://www.youtube.com",
-              user: "usuario",
-              password: "password",
+              url: "http://10.225.122.241:25284/c/tienda/particulares/tol-trastienda/#!/m",
+              user: "adminPARTI",
+              password: "admin",
             },
           ],
         },
